@@ -1,20 +1,12 @@
 <use name=FWCore/PluginManager>
 <use name=FWCore/Utilities>
 <use name=Foundation/SealBase>
-<use name=Foundation/SealZip>
-<use name=Utilities/DCacheAdaptor>
-<use name=Utilities/RFIOAdaptor>
+<use name=Utilities/StorageTypes>
 <use name=boost>
-<use name=dcap>
 <export>
   <use name=FWCore/PluginManager>
-  <use name=FWCore/Utilities>
   <use name=Foundation/SealBase>
-  <use name=Foundation/SealZip>
-  <use name=Utilities/DCacheAdaptor>
-  <use name=Utilities/RFIOAdaptor>
   <use name=boost>
-  <use name=dcap>
   <lib name=UtilitiesStorageFactory>
 </export>
 
